<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:drawingCacheQuality="high"
    android:fadingEdge="vertical"
    android:paddingVertical="20dp"
    android:paddingHorizontal="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backButC"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="55dp"
                android:layout_height="58dp"
                android:layout_marginEnd="12dp"
                android:backgroundTint="@color/main"
                android:visibility="visible"
                app:cornerRadius="0dp"
                app:icon="?attr/homeAsUpIndicator"
                app:iconTint="#000000"
                app:iconPadding="0dp"
                tools:ignore="SpeakableTextPresentCheck"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/textConfCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oxanium"
                android:text="@string/confirm_code"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="34sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/confCodeDescr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oxanium"
            android:text="@string/confirm_code_descr"
            android:textColor="@color/black"
            android:layout_gravity="start"
            android:layout_marginTop="15dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/codeEditLine"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/enter_code"
            android:background="@drawable/ic_search_bar"
            android:drawableTint="@color/black"
            android:fontFamily="@font/oxanium"
            android:inputType="number"
            android:padding="24dp"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:visibility="visible"
            android:autofillHints="" />

        <Button
            android:id="@+id/confBut"
            android:layout_width="325dp"
            android:layout_height="75dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/main"
            android:backgroundTintMode="add"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/oxanium"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:cornerRadius="50dp"
            app:strokeColor="#000000"
            app:strokeWidth="1dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>