<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:drawingCacheQuality="high"
    android:fadingEdge="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oxanium"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/emailTextS"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/email"
            android:background="@drawable/ic_search_bar"
            android:drawableTint="@color/black"
            android:fontFamily="@font/oxanium"
            android:inputType="textEmailAddress"
            android:padding="24dp"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:visibility="visible"
            android:autofillHints="" />

        <EditText
            android:id="@+id/loginTextS"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="15dp"
            android:ems="25"
            android:background="@drawable/ic_search_bar"
            android:drawableTint="@color/black"
            android:fontFamily="@font/oxanium"
            android:inputType="textPersonName"
            android:hint="@string/login"
            android:padding="24dp"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:visibility="visible"
            android:autofillHints="" />

        <EditText
            android:id="@+id/passTextS"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:ems="25"
            android:background="@drawable/ic_search_bar"
            android:drawableTint="@color/black"
            android:fontFamily="@font/oxanium"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="24dp"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:visibility="visible"
            android:autofillHints="" />

        <Button
            android:id="@+id/button2"
            android:layout_width="325dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/green"
            android:backgroundTintMode="add"
            android:fontFamily="@font/oxanium"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:cornerRadius="50dp"
            app:strokeColor="#000000"
            app:strokeWidth="1dp" />
    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:layout_width="325dp"
        android:layout_height="65dp"
        android:background="@drawable/ic_navigation_bar"
        android:visibility="visible"
        app:itemHorizontalTranslationEnabled="false"
        app:itemIconTint="@color/black"
        app:itemTextColor="#000000"
        app:labelVisibilityMode="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/menu"
        tools:visibility="visible">

    </com.google.android.material.bottomnavigation.BottomNavigationView>
</androidx.constraintlayout.widget.ConstraintLayout>