<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/oxanium"
                android:text="@string/hi"
                android:textColor="@color/black"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/oxanium"
                android:text="@string/popular_now"
                android:textColor="@color/black"
                android:textSize="34sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/gameImagePop2"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:background="@drawable/circle_shape"
                    android:visibility="visible"
                    app:srcCompat="@android:drawable/divider_horizontal_dark"
                    tools:ignore="SpeakableTextPresentCheck"
                    tools:visibility="visible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/gameNamePop2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/oxanium"
                        android:text="TextView"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/gameGenrePop2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/oxanium"
                        android:text="TextView"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/gamePricePop2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/oxanium"
                        android:text="TextView"
                        android:textColor="@color/black"
                        android:textSize="24sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/oxanium"
                android:text="@string/rec"
                android:textColor="@color/black"
                android:textSize="34sp" />

            <androidx.recyclerview.widget.RecyclerView
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                android:id="@+id/rv_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:layout_width="325dp"
        android:layout_height="65dp"
        android:background="@drawable/ic_navigation_bar"
        android:visibility="visible"
        app:itemHorizontalTranslationEnabled="false"
        app:itemIconTint="@color/black"
        app:itemTextColor="#000000"
        app:labelVisibilityMode="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/menu"
        tools:visibility="visible">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>